--- a/src/app/pages/monitorear/monitorear.component.css
+++ b/src/app/pages/monitorear/monitorear.component.css
@@ -4,6 +4,12 @@
     align-items: center;
 }
 
+.grafica {
+    grid-area: grafica;
+    justify-content: center;
+    align-items: center;
+}
+
 .title {
     grid-area: title;
     justify-content: center;
@@ -15,7 +21,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 80px 1fr;
-    grid-template-areas: "title title" "listTermometro listTermometro";
+    grid-template-areas: "title title" "listTermometro grafica";
     row-gap: 1em;
     column-gap: 1em;
     max-width: 1300px;
