--- a/src/app/pages/monitorear/monitorear.component.html
+++ b/src/app/pages/monitorear/monitorear.component.html
@@ -3,5 +3,6 @@
     <div class="text-center mt-3 title">
         <h2 class="text-gray-800 font-weight-bold">Registro de temperaturas</h2>
     </div>
-    <app-list-temperatures class="lis-termometro"></app-list-temperatures>
+    <app-list-temperatures class="list-termometro"></app-list-temperatures>
+    <app-temp-grafica class="grafica"></app-temp-grafica>
 </div>
