--- a/src/app/pages/chatbot/chatbot.component.html
+++ b/src/app/pages/chatbot/chatbot.component.html
@@ -1,11 +1,11 @@
 <app-header></app-header>
-<div class="content-wrapper">
-    <section class="content-header">
-        <h1>DIALOG COVID 19</h1>
+<div class="container-fluid py-2">
+    <section class="content-header title">
+        <h1 class="text-gray-900">Chat Bot</h1>
     </section>
     <section class="content">
         <div class="box">
-            <iframe allow="microphone;" width="800" height="600" src="https://console.dialogflow.com/api-client/demo/embedded/365659b5-9305-45bc-adea-c29a41806fb6">
+            <iframe allow="microphone;" width="500" height="600" src="https://console.dialogflow.com/api-client/demo/embedded/365659b5-9305-45bc-adea-c29a41806fb6">
           </iframe>
         </div>
     </section>
