--- a/src/app/pages/chatbot/chatbot.component.html
+++ b/src/app/pages/chatbot/chatbot.component.html
@@ -5,7 +5,7 @@
     </section>
     <section class="content">
         <div class="box">
-            <iframe allow="microphone;" width="500" height="600" src="https://console.dialogflow.com/api-client/demo/embedded/365659b5-9305-45bc-adea-c29a41806fb6">
+            <iframe allow="microphone;" class="chatbot" src="https://console.dialogflow.com/api-client/demo/embedded/365659b5-9305-45bc-adea-c29a41806fb6">
           </iframe>
         </div>
     </section>
