--- a/src/app/pages/formularios/formularios.component.html
+++ b/src/app/pages/formularios/formularios.component.html
@@ -29,7 +29,7 @@
                                 <input type="text" class="form-control" id="cellphone" [(ngModel)]="cellphone" [ngModelOptions]="{standalone: true}">
                             </div>
                             <div class="mb-4">
-                                <select class="form-control form-control-lg" name="miselect" [(ngModel)]="clinica">
+                                <select class="form-control form-control-lg form-control-sm" name="miselect" [(ngModel)]="clinica">
                                 <option [value]="clinic.idclinic" *ngFor="let clinic of clinics">{{clinic.nombre}}</option>
                               </select>
                             </div>
