--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -30,3 +30,15 @@
     color: black !important;
     font-size: 1em;
 }
+
+@media (max-width: 748px) {
+    .img-profile {
+        display: none;
+    }
+    .alert {
+        display: none;
+    }
+    .image {
+        display: none;
+    }
+}
