--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-gradient-info shadow">
-    <a href="/client/inicio" class="navbar-brand">
+<nav class="navbar navbar-expand-lg navbar-light bg-gradient-info shadow topbar static">
+    <a href="/client/home" class="navbar-brand image">
         <img src="../../../assets/img/software.png" height="40" alt="Página principal Comfeco" title="Ir a página de inicio" />
     </a>
     <div class="d-none d-md-block">
@@ -23,22 +23,50 @@
     </div>
     <!-- Topbar Navbar -->
     <ul class="navbar-nav ml-auto">
-        <!-- Nav Item - User Information -->
-        <li class="nav-item dropdown no-arrow">
-            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="Ir a Mi perfil">
-                <span class="mr-2 d-none d-lg-inline text-gray-900 small"> {{nameComplete}} </span>
-                <img class="img-profile rounded-circle" src="https://media.revistagq.com/photos/5f1e923e3c95260b5c5ad9dc/4:3/w_1124,h_843,c_limit/superman-traje-negro.jpg">
+        <li class="nav-item dropdown no-arrow d-md-none">
+            <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fas fa-angle-down fa-fw"></i>
             </a>
-            <!-- Dropdown - User Information -->
-            <div class="dropdown-menu dropdown-menu-right popup shadow animated--grow-in" aria-labelledby="userDropdown">
-                <a [routerLink]="['/client/pagos']" routerLinkActive="router-link-active" class="dropdown-item colorLt" href="#" data-toggle="modal" data-target="#logoutModal">
-                    <i class="fas fas fa-money-bill-wave fa-sm fa-fw mr-2 text-gray-900"></i> Cerrar sesión
+            <!-- Dropdown - Messages -->
+            <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in popup position-absolute" aria-labelledby="searchDropdown">
+                <a class="dropdown-item headerLinks text-gray-400 " routerLinkActive="black" [routerLink]="['/client/home']" [routerLinkActiveOptions]=" {exact:true} ">
+                    <i class="fas fa-thermometer mr-2 text-gray-900"></i> Termometro
                 </a>
-                <a (click)="logoutClick()" class="dropdown-item colorLt" href="#" data-toggle="modal" data-target="#logoutModal">
+                <a class="nav-item nav-link" routerLinkActive="black" [routerLink]="['/client/temperaturas']" [routerLinkActiveOptions]=" {exact:true} ">
+                    <i class="fas fa-temperature-high mr-2 text-gray-900"></i> Temperaturas
+                </a>
+                <a *ngIf="userAdmin" class="nav-item nav-link" routerLinkActive="black" [routerLink]="['/client/registrarDoctor']" [routerLinkActiveOptions]=" {exact:true} ">
+                    <i class="fas fa-user-md mr-2 text-gray-900"></i> Registrar Doctor
+                </a>
+                <a *ngIf="userAdmin" class="nav-item nav-link" routerLinkActive="black" [routerLink]="['/client/registrarClinica']" [routerLinkActiveOptions]=" {exact:true} ">
+                    <i class="fas fa-hospital-user mr-2 text-gray-900"></i> Registrar Clinica
+                </a>
+                <a class="nav-item nav-link" routerLinkActive="black" [routerLink]="['/client/chatbot']" [routerLinkActiveOptions]=" {exact:true} ">
+                    <i class="fas fa-comment-medical mr-2 text-gray-900"></i> ChatBot
+                </a>
+                <a [routerLink]="['/client/pagos']" routerLinkActive="black" [routerLinkActiveOptions]=" {exact:true} " class="nav-item nav-link">
+                    <i class="fas fas fa-money-bill-wave fa-sm fa-fw mr-2 text-gray-900"></i> Pagar
+                </a>
+                <a (click)="logoutClick()" class="nav-item nav-link" routerLinkActive="black" [routerLinkActiveOptions]=" {exact:true} ">
                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-900"></i> Cerrar sesión
                 </a>
             </div>
-        </li>
+            <!-- Nav Item - User Information -->
+            <li class="nav-item dropdown no-arrow">
+                <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="Ir a Mi perfil">
+                    <span class="mr-2 d-none d-lg-inline text-gray-900 small"> {{nameComplete}} </span>
+                    <img class="img-profile rounded-circle" src="https://media.revistagq.com/photos/5f1e923e3c95260b5c5ad9dc/4:3/w_1124,h_843,c_limit/superman-traje-negro.jpg">
+                </a>
+                <!-- Dropdown - User Information -->
+                <div class="dropdown-menu dropdown-menu-right popup shadow animated--grow-in" aria-labelledby="userDropdown">
+                    <a [routerLink]="['/client/pagos']" routerLinkActive="router-link-active" class="dropdown-item colorLt" href="#" data-toggle="modal" data-target="#logoutModal">
+                        <i class="fas fas fa-money-bill-wave fa-sm fa-fw mr-2 text-gray-900"></i> Pagar
+                    </a>
+                    <a (click)="logoutClick()" class="dropdown-item colorLt" href="#" data-toggle="modal" data-target="#logoutModal">
+                        <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-900"></i> Cerrar sesión
+                    </a>
+                </div>
+            </li>
     </ul>
 </nav>
 <!-- End of Topbar -->
