--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -5,3 +5,12 @@
 input {
     margin-top: 24px !important;
 }
+/* 
+.login-background{
+    background-color: rgba(0,136,255,0.7);
+    height: auto;
+}
+
+.login-border{
+    border-radius: 100px !important;
+} */
