--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,9 @@
-<app-header></app-header>
-<div class="text-center mt-3">
-    <h2 class="text-gray-800 font-weight-bold">Ingenieria de software I - Proyecto final IoT</h2>
-</div>
-<div class="container-fluid py-2">
-    <app-termometro class="termometro"></app-termometro>
+<app-header class="header"></app-header>
+<div class="container">
+    <div class="text-center mt-3">
+        <h2 class="text-gray-800 font-weight-bold">Bienvenido!</h2>
+    </div>
+    <div class="container-fluid py-2">
+        <app-termometro class="termometro"></app-termometro>
+    </div>
 </div>
