--- a/src/app/pages/pagos/pagos.component.html
+++ b/src/app/pages/pagos/pagos.component.html
@@ -5,24 +5,24 @@
 
 <body>
     <div class=" container-fluid d-flex flex-wrap ">
-        <div class="tabla mr-1 shadow pago1">
+        <div class="tabla mr-1 shadow">
             <h2>Basico</h2>
-            <img src="../../../assets/img/2.jpg " alt=" ">
+            <img src="../../../assets/img/2.jpg " alt=" " class="imagepago">
             <h3>200<sup>Bs</sup>
             </h3>
             <p>Paga Ahora y Envia tu Recibo al siguiente Link</p>
             <a href="https://api.whatsapp.com/send?phone=59175363339&text=Plan%20Basico%20enviar%20imagen%20:" class="boton">Clic Enlance</a>
         </div>
-        <div class="tabla mr-1 shadow pago2">
+        <div class="tabla mr-1 shadow">
             <h2>Estandar</h2>
-            <img src="../../../assets/img/3.jpg " alt=" ">
+            <img src="../../../assets/img/3.jpg " alt=" " class="imagepago">
             <h3>500<sup>Bs</sup></h3>
             <p>Paga Ahora y Envia tu Recibo al siguiente Link</p>
             <a href="https://api.whatsapp.com/send?phone=59175363339&text=Plan%20Estandar%20enviar%20imagen%20:" class="boton">Clic Enlace</a>
         </div>
         <div class="tabla shadow">
             <h2>Avanzado</h2>
-            <img src="../../../assets/img/1.jpg pago3" alt=" ">
+            <img src="../../../assets/img/1.jpg" alt=" " class="imagepago">
             <h3>800<sup>Bs</sup></h3>
             <p>Paga Ahora y Envia tu Recibo al siguiente Link</p>
             <a href="https://api.whatsapp.com/send?phone=59175363339&text=Plan%20Avanzado%20enviar%20imagen%20:" class="boton">Clic Enlace</a>
